--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Card</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/modern-normalize@latest/modern-normalize.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Photo<br />Card</h1>
-        <p>
+    <header class="header">
+        <h1>Photo <br> Card</h1>
+        <p class="header-text">
             On this website you can find a card with a random image from
             <a href="https://www.unsplash.com">unsplash</a>. Try to focus on
             creating the main structure of the HTML and CSS first. Then add the
@@ -21,19 +21,19 @@
             must only be 65 characters wide.
         </p>
     </header>
+
     <main>
         <div class="container">
-            <img class="natur" src="natur.jpeg" alt="Naturbild">
-            <img class="star" src="star.png" alt="*">
-            <h2>
-                Natur
-            </h2>
-            <p class="unterschrift">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, hic.
-            </p>
-        </div>
+            <img class="natur" src="https://source.unsplash.com/600x600/?nature
+        " alt="ein bild">
+            <img class="star" src="star.png" alt="ein bild">
+            <h2>Nature</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
 
+        </div>
     </main>
+
+
 
 </body>
 
