adds a new style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Photo Card</title>
     <link rel="stylesheet" href="https://unpkg.com/modern-normalize@latest/modern-normalize.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <!-- ==== Header ==== -->
     <header class="header">
         <h1>Photo <br> Card</h1>
         <p class="header-text">
@@ -22,10 +24,11 @@
         </p>
     </header>
 
+    <!-- ===== Main ===== -->
+
     <main>
         <div class="container">
-            <img class="natur" src="https://source.unsplash.com/600x600/?nature
-        " alt="ein bild">
+            <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
             <img class="star" src="star.png" alt="ein bild">
             <h2>Nature</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
