--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <div class="container">
             <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
-            <img class="star" src="star.png" alt="ein bild">
+            <img class="star" src="star.png" alt="ein Stern">
             <h2>Nature</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
 
