--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 
     <main>
         <div class="container">
-            <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
-            <img class="star" src="star.png" alt="ein Stern">
+            <div class="natur-rahmen">
+                <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
+
+                <img class="star" src="star.png" alt="ein Stern">
+            </div>
             <h2>Nature</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
 
