--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <div class="container">
-            <div class="natur-rahmen">
+            <div class="images">
                 <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
 
                 <img class="star" src="star.png" alt="ein Stern">
