--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Photo Card</title>
     <link rel="stylesheet" href="https://unpkg.com/modern-normalize@latest/modern-normalize.css" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
 </head>
 
 <body>
@@ -38,6 +42,38 @@
 
         </div>
     </main>
+    <!-- ======= Footer ======= -->
+
+    <footer>
+
+        <section id="footer">
+            <div class="sos">
+                <i class="fa-solid fa-user"></i>
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, sed!</p>
+            </div>
+
+            <div class="sos">
+                <i class="fa-solid fa-paw"></i>
+                <h2>About My Pet</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium vel
+                    exercitationem
+                    fuga itaque voluptatum.</p>
+            </div>
+
+            <div class="sos">
+                <i class="fa-solid fa-envelope"></i>
+                <h2>Contact</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora animi corrupti soluta
+                    velit
+                    architecto omnis quae ducimus eum porro autem? Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Minima, molestiae.</p>
+            </div>
+
+        </section>
+
+    </footer>
+
 
 
 
