--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
 
     <main>
         <div class="container">
+
             <div class="images">
                 <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
-
                 <img class="star" src="star.png" alt="ein Stern">
             </div>
+            <i class="fa-solid fa-plane"></i>
             <h2>Nature</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
 
         </div>
     </main>
+
     <!-- ======= Footer ======= -->
 
     <footer>
