add media queris

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
                 <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
                 <img class="star" src="star.png" alt="ein Stern">
             </div>
+            <h2>Nature</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
+
+        </div>
+
+        <div class="list-view">
+            <div class="images">
+                <img class="natur" src="natur.jpeg" alt="ein bild von Biene">
+            </div>
             <i class="fa-solid fa-plane"></i>
             <h2>Nature</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, dicta?</p>
